@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-05T16:16:48Z",
+  "timestamp" : "2022-07-06T01:09:29Z",
   "count_outdated" : 377,
   "uniques_outdated" : 204,
-  "count" : 401,
+  "count" : 402,
   "uniques" : 218,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-07-05T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
