@@ -1,3 +1,10 @@
+2022-07-06T01:09:29Z:
+* notice: last 14d: unq all: 2 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 204 377 / 218 401
+* notice: next accum: outdated-unq outdated-all / unq all: 204 377 / 218 402
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2022-07-05]
+
 2022-07-05T16:16:48Z:
 * notice: last 14d: unq all: 2 24
 * notice: prev accum: outdated-unq outdated-all / unq all: 203 376 / 218 400
